# bitcoindevkit-scripts

./: .gitignore  Kt-1.balance.main.kts  Kt3.getaddress.main.kts  Kt4.opreturn.main.kts  Py-1.balance.py  Py2.blockinfo.py  README.md  Readme.md  Rs1.balance.rs
kotlin/: 1.balance.main.kts  10.create-tx-from-raw-bytes.main.kts  11.derive-custom-path.main.kts  12.basic-transaction.main.kts  2.blockinfo.main.kts  3.getaddress.main.kts  4.opreturn.main.kts  5.listunspentutxo.main.kts  6.descriptor-from-mnemonic.main.kts  7.public-descriptor-template.main.kts  8.transaction-details.main.kts  9.private-descriptor-template.main.kts
python/: 1.balance.py  2.blockinfo.py  3.getaddress.py  utilities.py
rust/: 1.balance.rs  2.descriptortemplates.rs  3.balance-from-rpc.rs  4.bdk-policy.rs  4.miniscript-policy.rs  5.miniscript-compilation.rs  6.fee-estimation.rs  7.miniscript-policy-parser.rs
rust/policy_parser/: Cargo.toml  input.json  input2.json  output.json
rust/policy_parser/src/: main.rs
swift/: 1.balance.swift  10.create-tx-from-raw-bytes.swift  11.derive-custom-path.swift  12.basic-transaction.swift  2.blockinfo.swift  3.getaddress.swift  4.opreturn.main.swift  4.opreturn.swift  5.listunspentutxo.main.swift  5.listunspentutxo.swift  6.descriptor-from-mnemonic.swift  7.public-descriptor-template.swift  8.transaction-details.swift  9.private-descriptor-template.swift
