[package]
name = "policy_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
bdk = { version = "0.25.0", default-features = false, features = ["compiler", "electrum", "all-keys"]}
bitcoin = "0.29.2"
